# asgi-dispatcher-middleware

./: .pre-commit-config.yaml  LICENSE  changelog.md  pyproject.toml  readme.md  setup.cfg
.github/workflows/: main.yml
asgi_dispatcher_middleware/: __init__.py  _core.py  asgitypes.py
tests/: test_asgi_dispatcher_middleware.py
